Fixed navbar, changed background color for contrast, added bold to the menu

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,3 +33,16 @@ div.menu {
 a.nav-link {
   color: #000000 !important;
 }
+
+#navbarSupportedContent {
+  background-color: white;
+  padding: 8px;
+  border-radius: 32px;
+  box-shadow: 0px 0px 6px rgb(204, 204, 204);
+}
+
+a.navbar-brand {
+  background-color: white;
+  border-radius: 50%;
+  box-shadow: 0px 0px 6px rgb(192, 192, 192);
+}
